--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "jest"
+    "test": "jest",
+    "node-dev": "nodemon ./server/server.js"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "express": "^4.16.3",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "sqlite3": "^4.0.2",
-    "react-navigation": "^2.11.2"
+    "react-navigation": "^2.11.2",
+    "sqlite3": "^4.0.2"
   }
 }
