--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "express": "^4.16.3",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-expo-image-cache": "^3.1.1",
     "react-navigation": "^2.11.2",
+    "react-photo-gallery": "^6.2.0",
     "sqlite3": "^4.0.2"
   }
 }
