--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native": "~0.55.2",
     "react-native-cli": "^2.0.1",
     "react-native-expo-image-cache": "^3.1.1",
+    "react-native-slider": "^0.11.0",
+    "react-native-video": "^3.2.0",
     "react-navigation": "^2.11.2",
     "react-photo-gallery": "^6.2.0",
     "sqlite3": "^4.0.2"
