--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-expo-image-cache": "^3.1.1",
     "react-navigation": "^2.11.2",
     "react-photo-gallery": "^6.2.0",
-    "sqlite3": "^4.0.2"
+    "sqlite3": "^4.0.2",
+    "twilio": "^3.19.1"
   }
 }
