--- a/app.json
+++ b/app.json
@@ -20,6 +20,16 @@
       "iosExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/ios-v2.5.10-sdk27.0.0-7e6dd135-e649-48e2-ab7c-e76521ce6259.tar.gz",
       "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v2.5.3-sdk27.0.0-408c8d77-8d1f-4784-b7b4-93826250663a.tar.gz"
     },
-    "scheme": "exp8699ab8d7acc4c478e1a9cc6cec51758"
+    "scheme": "exp8699ab8d7acc4c478e1a9cc6cec51758",
+    "splash": {
+      "backgroundColor": "#ffffff",
+      "resizeMode": "cover",
+      "ldpi": "./assets/splash.png",
+      "mdpi": "./assets/splash.png",
+      "hdpi": "./assets/splash.png",
+      "xhdpi": "./assets/splash.png",
+      "xxhdpi": "./assets/splash.png",
+      "xxxhdpi": "./assets/splash.png"
+    }
   }
 }
