--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-native-video": "^3.2.0",
     "react-navigation": "^2.11.2",
     "react-photo-gallery": "^6.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "sqlite3": "^4.0.2"
   }
 }
