--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-cli": "^2.0.1",
     "react-native-expo-image-cache": "^3.1.1",
+    "react-native-modal": "^6.5.0",
     "react-native-slider": "^0.11.0",
     "react-native-video": "^3.2.0",
     "react-navigation": "^2.11.2",
