--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "expo": "^27.0.1",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "node-fetch": "^2.2.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
