--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^5.4.0",
+    "jest-expo": "~29.0.0",
     "react-native-scripts": "1.14.0",
-    "jest-expo": "~27.0.0",
     "react-test-renderer": "16.3.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -22,12 +23,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^27.0.1",
+    "expo": "^29.0.0",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "node-fetch": "^2.2.0",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "react-native-cli": "^2.0.1",
     "react-native-elements": "^0.19.1",
     "react-native-expo-image-cache": "^3.1.1",
@@ -39,6 +40,8 @@
     "react-photo-gallery": "^6.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
     "sqlite3": "^4.0.2",
     "twilio": "^3.19.2"
   }
