--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^27.0.1",
     "express": "^4.16.3",
     "node-fetch": "^2.2.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-cli": "^2.0.1",
+    "react-native-dialog": "^5.1.0",
     "react-native-expo-image-cache": "^3.1.1",
+    "react-native-grid-component": "^1.1.0",
     "react-native-image-overlay": "^0.1.2",
     "react-native-modal": "^6.5.0",
     "react-native-slider": "^0.11.0",
