--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-image-overlay": "^0.1.2",
     "react-native-modal": "^6.5.0",
     "react-native-slider": "^0.11.0",
+    "react-native-swipe-list-view": "^1.3.1",
     "react-native-video": "^3.2.0",
     "react-navigation": "^2.11.2",
     "react-photo-gallery": "^6.2.0",
