--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-cli": "^2.0.1",
     "react-native-dialog": "^5.1.0",
+    "react-native-dialog-input": "^1.0.4",
     "react-native-expo-image-cache": "^3.1.1",
     "react-native-grid-component": "^1.1.0",
     "react-native-image-overlay": "^0.1.2",
